# SteelTrack

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt  steeltrack.db
backend/app/: auth.py  database.py  main.py  models.py
backend/app/routes/: orders.py  products.py
backend/app/services/: logger.py
frontend/: app.js  index.html  style.css
